Keep the codec's shared caches in ConcurrentHashMaps
The caches of interned strings and parsed FILTER lists were copy-on-write
HashMaps: a miss copied the whole map to publish a new one. That is
quadratic in the number of distinct strings. A sites-only VCF with one
record on each of 25,000, 50,000 and 100,000 contigs took 3.1 s, 12.9 s
and 52.1 s to read; the same files take 0.03-0.05 s now, and 200,000
contigs 0.11 s. Call sets on fragmented assemblies do have that many.

They are ConcurrentHashMaps now, read with get() first and written with
putIfAbsent() only on a miss. The order matters: putIfAbsent and
computeIfAbsent lock the key's bin even when the key is present, and
calling them on every lookup is what cost 3-5% in an earlier version of
this change. With get() first there is no measurable difference from the
copy-on-write maps: over 15 alternating JMH forks of each build,
vcfGenotypes moved +0.2% on one-sample input and +0.4% on 1000-sample
input, and vcfRead between -1.0% and +1.3% over 5 forks, all well inside
the 1-4% spread between forks of the same build.

A test decodes 100,000 distinct contigs under a timeout, which the
copy-on-write maps miss by a wide margin. The changelog no longer lists
stringCache among the removed fields; it is private, and subclasses
intern through getCachedString.